--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "node": ">= 18"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^3.2.3"
+    "@iobroker/adapter-core": "^3.2.3",
+    "@iobroker/eslint-config": "^2.0.3"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.8.0",
@@ -76,7 +77,7 @@
     "test:integration": "mocha test/integration --exit",
     "test": "npm run test:ts && npm run test:package",
     "check": "tsc --noEmit",
-    "lint": "eslint --ext .ts src/",
+    "lint": "eslint -c eslint.config.js --ext .ts src/",
     "translate": "translate-adapter",
     "release": "release-script",
     "dev-server": "dev-server"
