--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "node": ">= 18"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^3.2.3",
-    "@iobroker/eslint-config": "^2.0.3"
+    "@iobroker/adapter-core": "^3.2.3"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.8.0",
