--- a/admin/jsonConfig.json5
+++ b/admin/jsonConfig.json5
@@ -144,41 +144,58 @@
 							"title": "unit",
 							"attr": "unit",
 							"options": [
-								{"label": "", "value": 0},
-								{"label": "deg", "value": 1},
-								{"label": "wm", "value": 2},
-								{"label": "l/h", "value": 3},
-								{"label": "sec", "value": 4},
-								{"label": "min", "value": 5},
-								{"label": "K", "value": 7},
-								{"label": "%", "value": 8},
-								{"label": "kW", "value": 9},
-								{"label": "MWh", "value": 10},
-								{"label": "kWh", "value": 11},
-								{"label": "V", "value": 12},
-								{"label": "mA", "value": 13},
-								{"label": "h", "value": 14},
-								{"label": "d", "value": 15},
-								{"label": "km/h", "value": 18},
-								{"label": "Hz", "value": 19},
-								{"label": "l/m", "value": 20},
-								{"label": "bar", "value": 21},
-								{"label": "W", "value": 69},
+								{"value": 0, "label": "Dimensionless"},
+								{"value": 1, "label": "Temperature C"},
+								{"value": 2, "label": "Solar radiation"},
+								{"value": 3, "label": "Flow rate l/h"},
+								{"value": 4, "label": "Seconds"},
+								{"value": 5, "label": "Minutes"},
+								{"value": 8, "label": "Percent"},
+								{"value": 10, "label": "Output kW"},
+								{"value": 11, "label": "Energy kWh"},
+								{"value": 12, "label": "Energy MWh"},
+								{"value": 13, "label": "Voltage"},
+								{"value": 14, "label": "Amperage mA"},
+								{"value": 15, "label": "Hours"},
+								{"value": 16, "label": "Days"},
+								{"value": 17, "label": "Number of pulses"},
+								{"value": 18, "label": "Resistance"},
+								{"value": 19, "label": "Litres"},
+								{"value": 20, "label": "Speed km/h"},
+								{"value": 21, "label": "Frequency"},
+								{"value": 22, "label": "Flow rate l/min"},
+								{"value": 23, "label": "Pressure bar"},
+								{"value": 24, "label": "Performance factor | Dimesionless (.2)"},
+								{"value": 26, "label": "Length m"},
+								{"value": 27, "label": "Length mm"},
+								{"value": 28, "label": "Cubic metres"},
+								{"value": 35, "label": "Flow rate l/d"},
+								{"value": 36, "label": "Speed m/s"},
+								{"value": 37, "label": "Flow rate m3/min"},
+								{"value": 38, "label": "Flow rate m3/h"},
+								{"value": 39, "label": "Flow rate m3/d"},
+								{"value": 50, "label": "Euro"},
+								{"value": 51, "label": "Dollar"},
+								{"value": 52, "label": "Absolute humidity"},
+								{"value": 53, "label": "Dimensionless (.5)"},
+								{"value": 54, "label": "Degree (angle)"},
+								{"value": 58, "label": "Dimensionless (.1)"},
+								{"value": 60, "label": "Time in minutes"},
+								{"value": 63, "label": "Amperage"},
+								{"value": 65, "label": "Pressure mbar"},
+								{"value": 66, "label": "Pressure Pa"},
+								{"value": 67, "label": "CO2 content (ppm)"},
+								{"value": 69, "label": "Output W"},
+								{"value": 70, "label": "Weight t"},
+								{"value": 71, "label": "Weight kg"},
+								{"value": 72, "label": "Weight g"},
+								{"value": 73, "label": "Length cm"},
+								{"value": 76, "label": "Radon concentration"},
+								{"value": 77, "label": "Price ct/kWh"},
 							],
 							"filter": false,
 							"sort": true,
 							"disabled": "data.analog == false"
-						},
-						{
-							"type": "text",
-							"width": "5%",
-							"title": "factor",
-							"attr": "factor",
-							"filter": false,
-							"sort": true,
-							"validator": "!!data.name",
-							"disabled": "data.analog == false"
-						
 						}
 
 
@@ -262,43 +279,59 @@
 							"title": "unit",
 							"attr": "unit",
 							"options": [
-								{"label": "", "value": 0},
-								{"label": "deg", "value": 1},
-								{"label": "wm", "value": 2},
-								{"label": "l/h", "value": 3},
-								{"label": "sec", "value": 4},
-								{"label": "min", "value": 5},
-								{"label": "K", "value": 7},
-								{"label": "%", "value": 8},
-								{"label": "kW", "value": 9},
-								{"label": "MWh", "value": 10},
-								{"label": "kWh", "value": 11},
-								{"label": "V", "value": 12},
-								{"label": "mA", "value": 13},
-								{"label": "h", "value": 14},
-								{"label": "d", "value": 15},
-								{"label": "km/h", "value": 18},
-								{"label": "Hz", "value": 19},
-								{"label": "l/m", "value": 20},
-								{"label": "bar", "value": 21},
-								{"label": "W", "value": 69},
+								{"value": 0, "label": "Dimensionless"},
+								{"value": 1, "label": "Temperature C"},
+								{"value": 2, "label": "Solar radiation"},
+								{"value": 3, "label": "Flow rate l/h"},
+								{"value": 4, "label": "Seconds"},
+								{"value": 5, "label": "Minutes"},
+								{"value": 8, "label": "Percent"},
+								{"value": 10, "label": "Output kW"},
+								{"value": 11, "label": "Energy kWh"},
+								{"value": 12, "label": "Energy MWh"},
+								{"value": 13, "label": "Voltage"},
+								{"value": 14, "label": "Amperage mA"},
+								{"value": 15, "label": "Hours"},
+								{"value": 16, "label": "Days"},
+								{"value": 17, "label": "Number of pulses"},
+								{"value": 18, "label": "Resistance"},
+								{"value": 19, "label": "Litres"},
+								{"value": 20, "label": "Speed km/h"},
+								{"value": 21, "label": "Frequency"},
+								{"value": 22, "label": "Flow rate l/min"},
+								{"value": 23, "label": "Pressure bar"},
+								{"value": 24, "label": "Performance factor | Dimesionless (.2)"},
+								{"value": 26, "label": "Length m"},
+								{"value": 27, "label": "Length mm"},
+								{"value": 28, "label": "Cubic metres"},
+								{"value": 35, "label": "Flow rate l/d"},
+								{"value": 36, "label": "Speed m/s"},
+								{"value": 37, "label": "Flow rate m3/min"},
+								{"value": 38, "label": "Flow rate m3/h"},
+								{"value": 39, "label": "Flow rate m3/d"},
+								{"value": 50, "label": "Euro"},
+								{"value": 51, "label": "Dollar"},
+								{"value": 52, "label": "Absolute humidity"},
+								{"value": 53, "label": "Dimensionless (.5)"},
+								{"value": 54, "label": "Degree (angle)"},
+								{"value": 58, "label": "Dimensionless (.1)"},
+								{"value": 60, "label": "Time in minutes"},
+								{"value": 63, "label": "Amperage"},
+								{"value": 65, "label": "Pressure mbar"},
+								{"value": 66, "label": "Pressure Pa"},
+								{"value": 67, "label": "CO2 content (ppm)"},
+								{"value": 69, "label": "Output W"},
+								{"value": 70, "label": "Weight t"},
+								{"value": 71, "label": "Weight kg"},
+								{"value": 72, "label": "Weight g"},
+								{"value": 73, "label": "Length cm"},
+								{"value": 76, "label": "Radon concentration"},
+								{"value": 77, "label": "Price ct/kWh"},
 							],
 							"filter": false,
 							"sort": true,
 							"disabled": "data.analog == false"
-						},
-						{
-							"type": "text",
-							"width": "5%",
-							"title": "factor",
-							"attr": "factor",
-							"filter": false,
-							"sort": true,
-							"validator": "!!data.name",
-							"disabled": "data.analog == false"
-						
 						}
-
 					]
 
 				}
