--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "node": ">= 20"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^3.3.1"
+    "@iobroker/adapter-core": "^3.3.2"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.8.0",
@@ -32,6 +32,7 @@
     "@alcalzone/release-script-plugin-license": "^3.7.0",
     "@alcalzone/release-script-plugin-manual-review": "^3.7.0",
     "@iobroker/adapter-dev": "^1.4.0",
+    "@iobroker/eslint-config": "^2.2.0",
     "@iobroker/testing": "^5.1.1",
     "@tsconfig/node20": "^20.1.4",
     "@types/chai": "^5.0.1",
@@ -79,7 +80,7 @@
     "test:integration": "mocha test/integration --exit",
     "test": "npm run test:ts && npm run test:package",
     "check": "tsc --noEmit",
-    "lint": "eslint -c eslint.config.js --ext .ts src/",
+    "lint": "eslint -c eslint.config.mjs --ext .ts src/",
     "translate": "translate-adapter",
     "release": "release-script",
     "dev-server": "dev-server"
