--- a/package.json
+++ b/package.json
@@ -42,15 +42,9 @@
     "@types/proxyquire": "^1.3.31",
     "@types/sinon": "^17.0.3",
     "@types/sinon-chai": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.41.0",
-    "@typescript-eslint/parser": "^8.45.0",
     "chai": "^6.0.1",
     "chai-as-promised": "^8.0.2",
-    "eslint": "^9.36.0",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-prettier": "^5.2.3",
     "mocha": "^11.7.3",
-    "prettier": "^3.5.3",
     "proxyquire": "^2.1.3",
     "rimraf": "^4.4.1",
     "sinon": "^19.0.2",
@@ -80,7 +74,7 @@
     "test:integration": "mocha test/integration --exit",
     "test": "npm run test:ts && npm run test:package",
     "check": "tsc --noEmit",
-    "lint": "eslint -c eslint.config.mjs --ext .ts src/",
+    "lint": "eslint -c eslint.config.mjs .",
     "translate": "translate-adapter",
     "release": "release-script",
     "dev-server": "dev-server"
